# OOP_LAB5

./: CMakeLists.txt  README.md  main.cpp
include/: list.h  memory.h
test/: tests01.cpp
